# Voices-Assistant-For-Windows

./: .env-example  .gitignore  README.md  commands.yaml  config.yaml  dev.py  example.py  main.py  main2.py  pyproject.toml  requirements.structure.txt  requirements.txt  skills_dataset.yaml  words.py  world.py
JarvisExample/: example-1.md  integrate-ai.md  strukture.md
classifier/: cache.py  model.py
controllers/: default.py  music.py  system_control.py  time_service.py  weather.py  wiki.py  youtube.py
core/: asistent.py  command_manager.py  command_words.py  config.py  logger.py  memory.py  settings.py  text_analyzer.py  words_data.py
core/recognizers/: __init__.py  offline.py  online.py  porcupine_listener.py
core/speakers/: pyttsx3_tts.py
data/: commands.yaml  config.yaml
data/models/: .gitignore
docs/: .gitignore  COMMANDS.md  CONFIG.md  feature_integrations.md  instalations.md  plan-3.md  plan-4.md
handlers/: base.py  great_handler.py  music_handler.py  search_handler.py  time_handler.py  weather_handler.py  wiki_handler.py
recognizer/: __init__.py  offline.py  online.py  porcupine_listener.py
skills/: __init__.py
skills/apps/: __init__.py  browser.py  music.py  notepad.py  telegram.py  youtube.py
skills/default/: __init__.py
skills/news/: skill.py
skills/times/: __init__.py  skill.py
skills/weathers/: skill.py
skills/web/: skill.py
speaker/: silero_tts.py  voice_player.py
tts/: audio_play.py  pyttsx3_tts.py  silero_tts.py
utils/: base.py  decorators.py  fuzzy_matcher.py  logger.py  open_program.py  resolve.py  text_cleaner.py
(+77 files in other folders)
