[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gtts>=2.5.4",
    "langdetect>=1.0.9",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.1",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
    "torch>=2.9.0",
    "vosk>=0.3.45",
]
